--- a/gaming.html
+++ b/gaming.html
@@ -484,8 +484,7 @@ z-index: 3;
 <br>
 
 <font family = "Verdana" style="font-size:8px;"><font color="#a8958d">
-<center>this is my progress diary for online games i'm playing currently<br>
-+ my personal mobile game recommendations</center>
+<center>this is my progress diary for online games i'm playing currently</center>
 </font></font>
 </center>
 <br><br>
@@ -884,78 +883,7 @@ cutest baby there is.<br>
 </font>
 
 
-<br><br><br><br>
-
-<sub><sub><img src="https://i.imgur.com/p85CyLw.png"></sub></sub><font color="#a8958d">　<b>mobile games i have played and recommend :</b></font>
-<br>
-<br><br><br><br>
-<div style="position:relative; left:10%; bottom:30px; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 270px; height: 300px; line-height:10px; padding:10px;">
-<div style="border: none; width: 260px; height: 290px; margin-top:6px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:10px; padding-right:5px; padding-left:5px;">
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=droidhang.twgame.restaurant" target="_blank">animal restaurant</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.poppin_games.peterrabbit_hog" target="_blank">hidden world</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=jp.cocone.p2" target="_blank">ポケコロツイン</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.elex.nikkigp" target="_blank">love nikki</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.poppingames.android.peter" target="_blank">peter rabbit's garden</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.unitedfun.prod.apollo" target="_blank">cocoppa play</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.ThreeCatGames.HamsterAttack" target="_blank">hamster hamster</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.dressup.avatar.doll.dressupgame" target="_blank">vlinder life</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.MayGreenStudio.dressup" target="_blank">momo's dressup</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.hyperbeard.kiki" target="_blank">kiki's vacation</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.weplaydots.twodotsandroid" target="_blank">two dots</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.hyperbeard.tsuki" target="_blank">tsuki adventure</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.hyperbeard.adorablehome" target="_blank">adorable home</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.zutgames.ilovehue2" target="_blank">i love hue too</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.cookapps.homecooking" target="_blank">miya's everyday joy of cooking</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=jp.co.imagineer.rilakkuma.farm" target="_blank">rilakkuma farm</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.healingjjam.cathouse" target="_blank">a cat house</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=okinawa.harapeco.catRestaurant" target="_blank">purrfect spirits</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.blueskygames.clicker" target="_blank">lutie rpg</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.AngelaHe.TheresThisGirl" target="_blank">there's this girl</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=air.jp.globalgear.jwl" target="_blank">ホウセキの樹　-完全無料で遊べる癒され放置ゲーム</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.cuticlenyanco.magicalgirl" target="_blank">魔法少女クリティカル～異世界と役立たずの初期魔法～</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.pulsmo.StrayCatDoors" target="_blank">stray cat doors</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.wooga.sumikko_jp" target="_blank">sumikko gurashi</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.seyeonsoft.pastel" target="_blank">pastel girl</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.joxdev.orbia" target="_blank">orbia</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.balysv.loop" target="_blank">infinity loop</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://apkpure.com/jp/%E3%83%90%E3%83%96%E3%83%AB%E3%83%91%E3%83%86%E3%82%A3-%E3%80%90%E7%94%98%E3%81%8B%E3%82%8F%E3%81%84%E3%81%84%E7%84%A1%E6%96%99%E3%81%AE%E3%83%91%E3%82%BA%E3%83%AB%E3%82%B2%E3%83%BC%E3%83%A0%E3%80%91/tokyo.seec.BubblePatissier" target="_blank">バブルパティ</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.zutgames.ilovehue" target="_blank">i love hue</a>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=exize.tapas.girlAdrift" target="_blank">a girl adrift</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.rayark.uproot" target="_blank">mandora</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://apkpure.com/es/%E6%9C%AC%E5%BD%93%E3%81%AF%E6%80%96%E3%81%84%E3%81%8A%E4%BA%BA%E5%BD%A2%E3%81%AE%E8%A9%B1/tokyo.seec.ikuseiDoll" target="_blank">本当は怖いお人形の話</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.QSSUMSTUDIO.FeeDog" target="_blank">feedog</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.movingstudio.stars" target="_blank">you are 100k light years away</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.PrismaThunder.Springfairy" target="_blank">spring fairy</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.movingstudio.ilikebeingwithyou" target="_blank">i like being with you</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://apkpure.com/jp/air-kitty/okinawa.harapeco.airKitty" target="_blank">にゃーん！猫ジャンプ</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.ThreeCatGames.ThisCell" target="_blank">my 49 days with cells</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.movingstudio.misswind" target="_blank">miss wind</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=jp.co.ofcr.cm00" target="_blank">cooking mama</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=jp.united.app.kanahei.game.turnip" target="_blank">giant turnip game</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=jp.co.overfence.mitchirinekodash" target="_blank">みっちりねこ だっしゅ！</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.loadcomplete.sheepindream" target="_blank">sheep in dream</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=jp.co.bbb.zombienekosushi" target="_blank">きょーふ ! ゾンビ猫くるくる回転寿司！</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=jp.whrp.sweets" target="_blank">つんで！アニマルスイーツカフェ</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=net.otouch.koro" target="_blank">rolling animals</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.microids.HdOv25.HdOAlice.freemium" target="_blank">alice in wonderland</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=air.com.pandazone.littleredhood" target="_blank">little red riding hood</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.escape.ikuseialice" target="_blank">evolution alice of madness</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://apkpure.com/%E7%9C%A0%E3%82%8A%E3%81%BF%E3%82%8B%E7%89%A9%E8%AA%9E%E3%80%9C%E5%A4%A2%E8%A6%8B%E3%82%8B%E5%B0%91%E5%A5%B3%E3%81%A8%E3%81%8A%E3%81%A8%E3%81%8E%E8%A9%B1%E3%80%9C%E3%80%90%E7%84%A1%E6%96%99%E8%82%B2%E6%88%90%E3%82%B2%E3%83%BC%E3%83%A0%E3%80%91/com.aduni.yumemono" target="_blank">眠りみる物語〜夢見る少女とおとぎ話〜</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.escape.alice" target="_blank">alice's escape</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.maasama.treesantwo" target="_blank">treesan2</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=jp.gree.greeappel" target="_blank">el</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://apkpure.com/44-chairs/com.goldlog.mychair" target="_blank">44 chairs</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.spryfox.alphabear" target="_blank">alphabear</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.fourdesire.plantnanny" target="_blank">plant nanny</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.ismaker.android.simsimi" target="_blank">simsimi</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.inline.reinoyousugaokashii" target="_blank">霊の様子がオカシイ</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.IceWaterGames.Viridi" target="_blank">viridi</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://play.google.com/store/apps/details?id=com.hoge.akazukin" target="_blank">escape darkness little red hood</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://apkpure.com/br/%E6%9D%B1%E6%96%B9-%E3%81%B1%E3%81%9F%E3%81%B1%E3%81%9F%E3%83%95%E3%83%A9%E3%83%B3%EF%BD%9E%E7%84%A1%E6%96%99%E6%9A%87%E3%81%A4%E3%81%B6%E3%81%97%E3%82%B2%E3%83%BC%E3%83%A0%EF%BD%9E/com.Flansou" target="_blank">東方　ぱたぱたフラン～無料暇つぶしゲーム～</a><br><br>
-<a id="linkbjinho" style="text-decoration:none;" href="https://apkpure.com/tw/%E6%94%BE%E7%BD%AE%E8%82%B2%E6%88%90%E3%82%B2%E3%83%BC%E3%83%A0-%E8%B5%A4%E3%81%9A%E3%81%8D%E3%82%93%EF%BD%9E%E9%96%8B%E3%81%8B%E3%81%9A%E3%81%AE%E6%A3%AE%E3%81%AE%E7%89%A9%E8%AA%9E%EF%BD%9E/tokyo.seec.ikuseiAkazukin" target="_blank">放置育成ゲーム　赤ずきん～開かずの森の物語～</a>
-</div>
-
-
+<br><br>
 
 </center>
 
