--- a/portfolio.html
+++ b/portfolio.html
@@ -734,7 +734,6 @@ function resetPlayer() {
 <img width="320px" height="auto" src="https://i.imgur.com/ep4ENU6.jpg"><br><br>
 <img width="320px" height="auto" src="https://i.imgur.com/l6QyZw0.jpg"><br><br>
 <img width="320px" height="auto" src="https://i.imgur.com/9pKl1Er.jpg"><br><br>
-<img width="320px" height="auto" src="https://i.imgur.com/2UHIKxH.jpg"><br><br>
 <img width="auto" height="280px" src="https://i.imgur.com/laqU3ts.jpg">
 <img width="auto" height="280px" src="https://i.imgur.com/Ynd8fVf.jpg"><br><br>
 <br><br><br><br>
@@ -758,7 +757,7 @@ function resetPlayer() {
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ photography ..<br><br>
 <br><br>
-<img width="400px" height="auto" src="https://i.imgur.com/kW0Y74l.png"><br><br><br><br>
+<img src="https://i.imgur.com/X1NeZoO.png"><br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
