--- a/portfolio.html
+++ b/portfolio.html
@@ -1067,11 +1067,11 @@ function resetPlayer2() {
             setInterval(volgendefotoyt, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/twt.txt" target="_blank" id="linkzinhoinho"><img id="twt" width="400px" height="auto" src="https://i.imgur.com/CNjCkl5.png"/></a>
+<a href="https://file.pooftie.me/js/twt.txt" target="_blank" id="linkzinhoinho"><img id="twt" width="400px" height="auto" src="https://i.imgur.com/DSmMqN5.png"/></a>
         <script type = "text/javascript">
             var imagetwt = document.getElementById("twt");
             var currentPostwt = 0;
-            var imagestwt = ["https://i.imgur.com/CNjCkl5.png", "https://i.imgur.com/FKDoT3H.png"]
+            var imagestwt = ["https://i.imgur.com/DSmMqN5.png", "https://i.imgur.com/Ttoe1um.png"]
 
             function volgendefototwt() {
                 if (++currentPostwt >= imagestwt.length)
@@ -1083,11 +1083,11 @@ function resetPlayer2() {
             setInterval(volgendefototwt, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/ig.txt" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/RjowAzo.png"/></a>
+<a href="https://file.pooftie.me/js/ig.txt" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/MkIS5NA.png"/></a>
         <script type = "text/javascript">
             var imageig = document.getElementById("ig");
             var currentPosig = 0;
-            var imagesig = ["https://i.imgur.com/RjowAzo.png", "https://i.imgur.com/FFMUUJl.png"]
+            var imagesig = ["https://i.imgur.com/MkIS5NA.png", "https://i.imgur.com/Jmd7Rs9.png"]
 
             function volgendefotoig() {
                 if (++currentPosig >= imagesig.length)
