--- a/portfolio.html
+++ b/portfolio.html
@@ -1035,11 +1035,11 @@ function resetPlayer2() {
 ( click the screenshots to get the .txt files )
 </font>
 <br><br><br>
-<a href="https://file.pooftie.me/js/tmblr.txt" target="_blank" id="linkzinhoinho"><img id="tmblr" width="400px" height="auto" src="https://i.imgur.com/1dAjLlp.png"/></a>
+<a href="https://file.pooftie.me/js/tmblr.txt" target="_blank" id="linkzinhoinho"><img id="tmblr" width="400px" height="auto" src="https://i.imgur.com/AqVXPvO.png"/></a>
         <script type = "text/javascript">
             var imagetmblr = document.getElementById("tmblr");
             var currentPostmblr = 0;
-            var imagestmblr = ["https://i.imgur.com/1dAjLlp.png", "https://i.imgur.com/tLhKiY4.png"]
+            var imagestmblr = ["https://i.imgur.com/AqVXPvO.png", "https://i.imgur.com/GiOSK5h.png"]
 
             function volgendefototmblr() {
                 if (++currentPostmblr >= imagestmblr.length)
@@ -1083,11 +1083,11 @@ function resetPlayer2() {
             setInterval(volgendefototwt, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/ig.txt" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/MkIS5NA.png"/></a>
+<a href="https://file.pooftie.me/js/ig.txt" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/5FvB3pk.png"/></a>
         <script type = "text/javascript">
             var imageig = document.getElementById("ig");
             var currentPosig = 0;
-            var imagesig = ["https://i.imgur.com/MkIS5NA.png", "https://i.imgur.com/Jmd7Rs9.png"]
+            var imagesig = ["https://i.imgur.com/5FvB3pk.png", "https://i.imgur.com/MWUL5W5.png"]
 
             function volgendefotoig() {
                 if (++currentPosig >= imagesig.length)
