--- a/blog.html
+++ b/blog.html
@@ -622,11 +622,11 @@ i made scripts for all the social media sites that i am currently using ( click 
 <br><br>
 
 <center>
-<a href="https://file.pooftie.me/js/tmblr.txt" target="_blank" id="linkzinhoinho"><img id="tmblr" width="400px" height="auto" src="https://i.imgur.com/1dAjLlp.png"/></a>
+<a href="https://file.pooftie.me/js/tmblr.txt" target="_blank" id="linkzinhoinho"><img id="tmblr" width="400px" height="auto" src="https://i.imgur.com/AqVXPvO.png"/></a>
         <script type = "text/javascript">
             var imagetmblr = document.getElementById("tmblr");
             var currentPostmblr = 0;
-            var imagestmblr = ["https://i.imgur.com/1dAjLlp.png", "https://i.imgur.com/tLhKiY4.png"]
+            var imagestmblr = ["https://i.imgur.com/AqVXPvO.png", "https://i.imgur.com/GiOSK5h.png"]
 
             function volgendefototmblr() {
                 if (++currentPostmblr >= imagestmblr.length)
@@ -670,11 +670,11 @@ i made scripts for all the social media sites that i am currently using ( click 
             setInterval(volgendefototwt, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/ig.txt" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/MkIS5NA.png"/></a>
+<a href="https://file.pooftie.me/js/ig.txt" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/5FvB3pk.png"/></a>
         <script type = "text/javascript">
             var imageig = document.getElementById("ig");
             var currentPosig = 0;
-            var imagesig = ["https://i.imgur.com/MkIS5NA.png", "https://i.imgur.com/Jmd7Rs9.png"]
+            var imagesig = ["https://i.imgur.com/5FvB3pk.png", "https://i.imgur.com/MWUL5W5.png"]
 
             function volgendefotoig() {
                 if (++currentPosig >= imagesig.length)
