--- a/links.html
+++ b/links.html
@@ -470,7 +470,7 @@ z-index: 3;
 #ooo { color: #c4a9ab; }
 </style>
 
-<div style="position:relative;  top:-8; width: 120px; height: 225px; overflow:hidden; float:left; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; line-height:14px; padding:5px;">
+<div style="position:relative;  top:-8; width: 120px; height: 200px; overflow:hidden; float:left; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; line-height:14px; padding:5px; padding-top:15px;">
 <font color="#b89c9f">
 <sub><sub><sub><img width="auto" height="22px" src="https://i.imgur.com/ihkqM9r.png"></sub></sub></sub> ‌ my casual accs :</font><div style="line-height:3px;"><br>
 <br></div>
@@ -478,9 +478,6 @@ z-index: 3;
  ‌  ‌‌ <font color="#7a6b6b">twt : </font><a id="ooo" title="ascii art acc" href="https://twitter.com/pooftie" target="_blank" >pooftie</a><br>
  ‌  ‌‌ <font color="#7a6b6b">insta : </font><a id="ooo" title="self care acc" href="https://instagr.am/pooftie" target="_blank" >pooftie</a><br>
  ‌  ‌‌ <font color="#7a6b6b">yt : </font><a id="ooo" title="playlist ch" href="https://youtube.com/pooftie" target="_blank" >pooftie</a><br>
- ‌  ‌‌ <font color="#7a6b6b">steam : </font><a id="ooo" title="gaming profile" href="https://s.team/u/pooftie" target="_blank" >pooftie</a><br>
- ‌  ‌‌ <font color="#7a6b6b">line : </font><a id="ooo" title="chat app" href="https://line.me/ti/p/~pooftie" target="_blank" >pooftie</a><br>
- ‌  ‌‌ <font color="#7a6b6b">dsc : </font><a id="ooo" title="add server" href="https://dsc.gg/pooftie" target="_blank" >pooftie</a><font color="#cfb8ba" style="font-size:8px;">#1997</font><br>
 <br>
 <sub><sub><sub><img width="auto" height="22px" src="https://i.imgur.com/AZjYJOQ.png"></sub></sub></sub><font color="#b89c9f"> ‌ my dev accs :</font><div style="line-height:3px;"><br>
 <br></div>
@@ -491,10 +488,10 @@ z-index: 3;
 <br>
 </div>
 
-<div style="position:relative; top:-8; float:right; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 120px; height: 225px; overflow-x:hidden; line-height:14px; padding:5px;">
+<div style="position:relative; top:-8; float:right; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 120px; height: 210px; overflow-x:hidden; line-height:14px; padding:5px;">
 <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b09698">
  ‌ my web pages :</font><br>
-<div style="border: none; width: 105px; height: 200px; margin-top:6px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:14px; padding-right:7px; padding-left:5px;">
+<div style="border: none; width: 105px; height: 190px; margin-top:6px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:14px; padding-right:7px; padding-left:5px;">
 <a id="ooo" href="https://2006.pooftie.me" target="_blank" >soft tribute</a>
 <br>
 <a id="ooo" href="https://emoji.pooftie.me" target="_blank" >my emoji pack</a>
@@ -532,16 +529,18 @@ z-index: 3;
 </div>
 </div>
 
-<br><br><br><br><br><br><br><br>
+<br><br><br><br>
 </div>
-<div style="position:absolute; left:20%; right:20%; top:73%; line-height:14px;">
+<div style="position:absolute; left:20%; right:20%; top:75%; line-height:14px;">
+
+<center><div style="position:relative; top:-33; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 210px; height: 20px; overflow-x:hidden; line-height:14px; padding:5px;">
+<center><sub><sub><img width="auto" height="20px" src="https://i.imgur.com/0ncrfbs.png"></sub></sub><font color="#b09698" style="font-size:10px;"> ‌ my email : </font><a id="ooo" href="mailto:letters@middlepot.com">letters@middlepot.com</a></center></div></center>
+
+<div style="position:relative; top:-10;">
 <font color="#a59490" style="font-size:9px;">
-<center><b>important :</b><br>
-these are all of my active and public accounts. please only consider<br>
-the accounts on this list as mine, unless stated otherwise.<br>
-if you have any questions, please don't hesitate to contact me :</font><div style="line-height:3px;"><br>
+<center><b>note :</b> these are my only public active accounts.<br>if you find any other with my name, it is either idle or fake.</font></font></center><div style="line-height:3px;">
+</div>
 <br></div>
-<a style="text-decoration:none;" href="mailto:letters@middlepot.com"><font id="linkzinho" color="#cea9a9">letters@middlepot.com</font></a></font></center>
 
 </div>
 </div>
