--- a/index.html
+++ b/index.html
@@ -474,17 +474,17 @@ z-index: 3;
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div>
+　　03.28 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> post on: <a href="/blog" style="text-decoration: none;"><font color="#DFB7B7">/blog</font></a><br>
+　　03.27 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
 　　03.17 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> photo on: <a href="/fashion" style="text-decoration: none;"><font color="#DFB7B7">/fashion</font></a><br>
 　　03.14 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
-　　03.04 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> url on: <a href="/shybunny" style="text-decoration: none;"><font color="#DFB7B7">/shybunny</font></a><br>
-　　03.04 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> url on: <a href="/poofties" style="text-decoration: none;"><font color="#DFB7B7">/poofties</font></a><br>
-　　02.25 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> tips on: <a href="/help" style="text-decoration: none;"><font color="#DFB7B7">/help</font></a><br>
+　　03.04 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> url on: <a href="/shybunny" style="text-decoration: none;"><font color="#DFB7B7">/shybunny</font></a><br>
 </div>
 </center>
 
 <br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2022 . march . 17</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2022 . march . 28</font></font></font>
 <div style="line-height: 13px"><br><br></div>
 <div style="line-height: 10px">
 <font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="/tips"><font color="#b7a596"> send me a little tip </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
