--- a/blog.html
+++ b/blog.html
@@ -590,25 +590,25 @@ i am happy if we make it come true. i always consider my projects a complete suc
 
 changing subjects, do you fluffies remember when i posted a few months ago about the new apps i was trying out for organization, self care track, and productivity ?
 by then, i mentioned procreate, which is a good ipad alternative for photoshop cs6, which is what i use on my laptop ( but not a substitute, for a bunch of reasons )
-and, i also mentioned that i was starting to use notion for taking quick notes and making to do lists that i intend to delete later on anyway ( so it’s way more convenient to do there than on photoshop or procreate ) ..
+and, i also mentioned that i was starting to use notion for taking quick notes and making to do lists that i intend to delete later on anyway ( so it's way more convenient to do there than on photoshop or procreate ) ..
 
 well, now that i have been studying japanese quite intensely ( kanjis are so stressful aa !!! ) i have been desperately trying to find a way to study on my ipad so i can write digitally and keep my notes neatly organized <sub>🖋</sub>
 i was, until recently, using procreate for handwriting digitally anything on my ipad, but it turned out to be quite messy when it comes to studying or planning .. !
-i tried to organize my notes on notion later on, or on my folders, but it wasn’t working very well since i couldn’t edit my notes later on .. and well, as life changes, plans change, and study notes need to be updated, right ?
+i tried to organize my notes on notion later on, or on my folders, but it wasn't working very well since i couldn't edit my notes later on .. and well, as life changes, plans change, and study notes need to be updated, right ?
 keeping all of my procreate projects was not very convenient either, i tried ;;
-( when i’m journaling things go very spontaneously and i don’t intend to keep editing later on, so i just save it on my folders forever and it’s completely fine )
+( when i'm journaling things go very spontaneously and i don't intend to keep editing later on, so i just save it on my folders forever and it's completely fine )
 
 what i needed was : an app where i could write well just like procreate, but also could organize my notes neatly, just like notion. could i possibly find the best of both worlds ?
 yes, i found it : goodnotes 5 !!
 it has been really great, since i can edit my templates on either procreate or photoshop, and then open them on goodnotes for writing, planning, and studying.
-it is not as clean and quick as notion, and i can’t edit images in there obviously, but it is still great for studying or planning : i keep my notes safe, organized, i can work on them carefully enough, and i also can edit them as many times as needed. highly recommended <sub>💟</sub>
+it is not as clean and quick as notion, and i can't edit images in there obviously, but it is still great for studying or planning : i keep my notes safe, organized, i can work on them carefully enough, and i also can edit them as many times as needed. highly recommended <sub>💟</sub>
 
-the only sad thing is that goodnotes isn’t available for pc or android, so i have to backup my notes manually for being able to check it on other devices ( and that way i can’t edit them ) ..
-so, for now, i’m still relying on notion for things that i need to keep checking multiple times during the day.
+the only sad thing is that goodnotes isn't available for pc or android, so i have to backup my notes manually for being able to check it on other devices ( and that way i can't edit them ) ..
+so, for now, i'm still relying on notion for things that i need to keep checking multiple times during the day.
 
 
-okay, so let’s go for the content i did for <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> recently !!
-it’s been a while, but i still haven’t posted about the valentine’s day event :</pre>
+okay, so let's go for the content i did for <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> recently !!
+it's been a while, but i still haven't posted about the valentine's day event :</pre>
 <br><br>
 
 <center><img id="valentines2022" width="430px" height="auto" src="https://i.imgur.com/w1DubXm.png">
@@ -636,9 +636,9 @@ it’s been a while, but i still haven’t posted about the valentine’s day ev
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
 it was a simple event, but very cute and with a bunch of new items !
-there was this little thematic stand where you could go and write valentine’s cards to your friends using exclusive stationery, and give them chocolates. <sub>💘</sub>
-depending on the chocolate you choose, your friend would receive an amount of “love” , that is a currency that you can use to buy exclusive clothing on the stand !
-so, this event was completely focused on exchanging cards and lots of love ( literally ) with everyone. isn’t that adorable ? <font color="#d3a5a5" style="font-size:11px;">♡</font>
+there was this little thematic stand where you could go and write valentine's cards to your friends using exclusive stationery, and give them chocolates. <sub>💘</sub>
+depending on the chocolate you choose, your friend would receive an amount of "love" , that is a currency that you can use to buy exclusive clothing on the stand !
+so, this event was completely focused on exchanging cards and lots of love ( literally ) with everyone. isn't that adorable ? <font color="#d3a5a5" style="font-size:11px;">♡</font>
 i also really love the motifs & colors .. i tried to include lots of hearts and strawberries <sub>🍓</sub>
 
 oh, after releasing this event, i got to color another beautiful coloring page from my friend <a id="linkbjinho" href="https://dollrosenheart.wixsite.com/sketchblog" target="_blank">babydollsheart</a> !!
@@ -653,11 +653,11 @@ i used similar colors to the ones from the event :</pre>
 
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-it’s so so cute <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+it's so so cute <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
 it really puts me into the mood of writing some cheesy love poems .. and eating a slice of cake too <sub>🍰</sub>
 
-now we’re halfway through working on the easter event and spring season, besides some other things.
-we’re a little late because of the inconveniences of life mentioned, but i still hope to release the new event in time for the holiday !
+now we're halfway through working on the easter event and spring season, besides some other things.
+we're a little late because of the inconveniences of life mentioned, but i still hope to release the new event in time for the holiday !
 
 
 aaa i also wanted to show you fluffies a lovely gift i got from my friend <a id="linkbjinho" href="https://uwuboa.neocities.org" target="_blank">uwuboa</a> !!</pre>
@@ -671,11 +671,11 @@ aaa i also wanted to show you fluffies a lovely gift i got from my friend <a id=
 
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-it’s me <sub>💖</sub>
-she completely surprised me, and i was during week 2 of being sick, so i really needed it.. i’m so grateful, so happy, it looks super soft <sub>🌷</sub>
-i treasure those little things .. it’s the kind of stuff that never fails to make me smile even years after !
+it's me <sub>💖</sub>
+she completely surprised me, and i was during week 2 of being sick, so i really needed it.. i'm so grateful, so happy, it looks super soft <sub>🌷</sub>
+i treasure those little things .. it's the kind of stuff that never fails to make me smile even years after !
 
-before finishing this post i wanted to show you some outfits that i made, as promised last post, but eep i couldn’t finish much so there are no photos yet <sub>📷</sub>
+before finishing this post i wanted to show you some outfits that i made, as promised last post, but eep i couldn't finish much so there are no photos yet <sub>📷</sub>
 the only photo i took was from my new shoes & socks :</pre>
 <br><br>
 
@@ -686,15 +686,15 @@ the only photo i took was from my new shoes & socks :</pre>
 
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i’m in love with these, matches almost all my clothes <sub>🥿</sub>
+i'm in love with these, matches almost all my clothes <sub>🥿</sub>
 i hope to finish my other outfits soon, because i want to wear them so badly .. !
-again i have been trapped inside home because of sickness, so i can’t wait to go outside next week and be carefree. <sub>🏠</sub>
+again i have been trapped inside home because of sickness, so i can't wait to go outside next week and be carefree. <sub>🏠</sub>
 
-it’s okay to sometimes just rest and do nothing all day, especially when you’re not feeling well.
-i feel that i expect too much from me in a short time, but it’s hard not to when time goes by so fast,, i have plans for the next 6 months ahead !
-but you know what ? it’s okay if things get delayed. it’s not like i must finish things as fast as possible, to reach some kind of fulfillment.
+it's okay to sometimes just rest and do nothing all day, especially when you're not feeling well.
+i feel that i expect too much from me in a short time, but it's hard not to when time goes by so fast,, i have plans for the next 6 months ahead !
+but you know what ? it's okay if things get delayed. it's not like i must finish things as fast as possible, to reach some kind of fulfillment.
 if anything, i just want to reach happiness, and we all can reach that at any time if we let go of the worries for a moment
-let’s try our best to keep going, okay ?</pre><br>
+let's try our best to keep going, okay ?</pre><br>
 
 xoxo <sub>❤️</sub>
 <br><br>
