--- a/blog.html
+++ b/blog.html
@@ -693,7 +693,7 @@ again i have been trapped inside home because of sickness, so i can't wait to go
 it's okay to sometimes just rest and do nothing all day, especially when you're not feeling well.
 i feel that i expect too much from me in a short time, but it's hard not to when time goes by so fast,, i have plans for the next 6 months ahead !
 but you know what ? it's okay if things get delayed. it's not like i must finish things as fast as possible, to reach some kind of fulfillment.
-if anything, i just want to reach happiness, and we all can reach that at any time if we let go of the worries for a moment
+if anything, i just want to reach happiness, and we all can reach that at any time if we let go of the worries for a moment ..
 let's try our best to keep going, okay ?</pre><br>
 
 xoxo <sub>❤️</sub>
